Add linter and formatter

--- a/Pipfile
+++ b/Pipfile
@@ -19,5 +19,7 @@ python_version = "3.12"
 
 [scripts]
 lint = "ruff check . --fix"
+lint-ci = "ruff check ."
 format = "ruff format ."
+format-ci = "ruff format . --check"
 sort = "ssort ."
