--- a/.github/workflows/frontend-format.yml
+++ b/.github/workflows/frontend-format.yml
@@ -15,13 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '20'
 
+
       - name: Install dependencies
         run: npm ci --include=dev
+        working-directory: frontend
 
       - name: Format
         run: npm run format-ci
+        working-directory: frontend
