--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --include=dev
+        working-directory: frontend
 
       - name: Lint
         run: npm run lint-ci
+        working-directory: frontend
