--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@mui/x-data-grid": "^6.18.2",
+    "@sentry/react": "^7.91.0",
+    "@sentry/vite-plugin": "^2.10.2",
     "openapi-fetch": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
