--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ sentry-sdk = {extras = ["fastapi"], version = "*"}
 uvicorn = {extras = ["standard"] }
 ruff = "*"
 ssort = "*"
+alembic = "*"
 
 [requires]
 python_version = "3.12"
