--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ aiohttp = "<4,>=3.9.0"
 asyncpg = ">=0.29.0"
 sqlalchemy = {extras = ["asyncio"], version = "*"}
 sentry-sdk = {extras = ["fastapi"], version = "*"}
+python-multipart = "*"
 
 [dev-packages]
 uvicorn = {extras = ["standard"] }
