--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ag-grid-community/core": "^31.0.2",
     "@ag-grid-community/react": "^31.0.2",
+    "@ag-grid-community/styles": "^31.0.2",
     "@ag-grid-enterprise/advanced-filter": "^31.0.2",
     "@ag-grid-enterprise/core": "^31.0.2",
     "@ag-grid-enterprise/multi-filter": "^31.0.2",
@@ -29,6 +30,8 @@
     "@mui/material": "^5.14.19",
     "@mui/x-data-grid": "^6.18.2",
     "@sentry/react": "^7.93.0",
+    "@tanstack/react-query": "^5.17.19",
+    "luxon": "^3.4.4",
     "openapi-fetch": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +40,7 @@
   "devDependencies": {
     "@sentry/vite-plugin": "^2.10.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.15",
